handled role not found case